# aerospace-healthcare-monitoring-system

./: .gitignore  README.md
assembly-checksum/: README.md  checksum.asm
cpp-simulator/: CMakeLists.txt  README.md
cpp-simulator/include/: SensorPacket.h
cpp-simulator/src/: main.cpp
csharp-control-panel/: AerospaceHealthcareControlPanel.csproj  MainForm.cs  Program.cs  README.md
docs/: api-contract.md  architecture.md  runbook.md  source-map.md
java-backend/: README.md  pom.xml
java-backend/src/main/java/com/aeromonitoring/: MonitoringSystemApplication.java
java-backend/src/main/java/com/aeromonitoring/controller/: SensorController.java
java-backend/src/main/java/com/aeromonitoring/dto/: AlertRequest.java  SensorRecordRequest.java
java-backend/src/main/java/com/aeromonitoring/model/: AlertRecord.java  SensorRecord.java
java-backend/src/main/java/com/aeromonitoring/repository/: AlertRecordRepository.java  SensorRecordRepository.java
java-backend/src/main/java/com/aeromonitoring/service/: AlertService.java  SensorService.java
java-backend/src/main/java/com/aeromonitoring/util/: ChecksumUtils.java
java-backend/src/main/resources/: application.yml
python-analysis/: README.md  analyzer.py  report_writer.py  thresholds.py
shared/: sensor-packet-example.json
vhdl-alert-circuit/: README.md  alert_circuit.vhd  alert_circuit_tb.vhd
website/: demo-story.html  dossier.html  index.html  mission-control.html  runbook.html  styles.css
